// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectTeam should match snapshot for fail of teams 1`] = `
<FailedNetworkAction
  actionDefaultMessage="try again"
  actionId="mobile.failed_network_action.retry"
  errorDefaultMessage="Messages will load when you have an internet connection or {tryAgainAction}."
  errorId="mobile.failed_network_action.shortDescription"
  onRetry={[Function]}
  theme={
    Object {
      "awayIndicator": "#ffbc42",
      "buttonBg": "#166de0",
      "buttonColor": "#ffffff",
      "centerChannelBg": "#ffffff",
      "centerChannelColor": "#3d3c40",
      "codeTheme": "github",
      "dndIndicator": "#f74343",
      "errorTextColor": "#fd5960",
      "linkColor": "#2389d7",
      "mentionBg": "#ffffff",
      "mentionBj": "#ffffff",
      "mentionColor": "#145dbf",
      "mentionHighlightBg": "#ffe577",
      "mentionHighlightLink": "#166de0",
      "newMessageSeparator": "#ff8800",
      "onlineIndicator": "#06d6a0",
      "sidebarBg": "#145dbf",
      "sidebarHeaderBg": "#1153ab",
      "sidebarHeaderTextColor": "#ffffff",
      "sidebarText": "#ffffff",
      "sidebarTextActiveBorder": "#579eff",
      "sidebarTextActiveColor": "#ffffff",
      "sidebarTextHoverBg": "#4578bf",
      "sidebarUnreadText": "#ffffff",
      "type": "Mattermost",
    }
  }
/>
`;

exports[`SelectTeam should match snapshot for teams 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginTop": 20,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "marginRight": 15,
          },
          null,
        ]
      }
    >
      <FormattedText
        defaultMessage="Open teams you can join"
        id="mobile.select_team.join_open"
        style={
          Object {
            "color": undefined,
            "fontSize": 13,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "backgroundColor": undefined,
          "height": 1,
          "width": "100%",
        }
      }
    />
  </View>
  <CustomList
    canRefresh={true}
    data={Array []}
    extraData={false}
    isLandscape={false}
    listType="flat"
    loading={false}
    loadingComponent={
      <View
        style={
          Object {
            "marginVertical": 10,
          }
        }
      >
        <Loading
          color="#3d3c40"
          size="small"
          style={Object {}}
        />
      </View>
    }
    onLoadMore={[Function]}
    onRefresh={[Function]}
    refreshing={false}
    renderItem={[Function]}
    shouldRenderSeparator={false}
    showNoResults={true}
    theme={
      Object {
        "awayIndicator": "#ffbc42",
        "buttonBg": "#166de0",
        "buttonColor": "#ffffff",
        "centerChannelBg": "#ffffff",
        "centerChannelColor": "#3d3c40",
        "codeTheme": "github",
        "dndIndicator": "#f74343",
        "errorTextColor": "#fd5960",
        "linkColor": "#2389d7",
        "mentionBg": "#ffffff",
        "mentionBj": "#ffffff",
        "mentionColor": "#145dbf",
        "mentionHighlightBg": "#ffe577",
        "mentionHighlightLink": "#166de0",
        "newMessageSeparator": "#ff8800",
        "onlineIndicator": "#06d6a0",
        "sidebarBg": "#145dbf",
        "sidebarHeaderBg": "#1153ab",
        "sidebarHeaderTextColor": "#ffffff",
        "sidebarText": "#ffffff",
        "sidebarTextActiveBorder": "#579eff",
        "sidebarTextActiveColor": "#ffffff",
        "sidebarTextHoverBg": "#4578bf",
        "sidebarUnreadText": "#ffffff",
        "type": "Mattermost",
      }
    }
  />
</View>
`;

exports[`SelectTeam should match snapshot when user is a guest 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <Connect(StatusBar) />
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": 16,
        "marginTop": 20,
      }
    }
  >
    <FormattedText
      defaultMessage="Your guest account has no teams or channels assigned. Please contact an administrator."
      id="mobile.select_team.guest_cant_join_team"
      style={
        Object {
          "color": undefined,
          "fontSize": 13,
        }
      }
    />
  </View>
</View>
`;
